src/styles.css
:root {
  --h4-margin: 10px;
  --dark: rgb(31, 31, 31);
  --light: rgb(236, 236, 236);
}

@font-face {
  font-family: roboto;
  src: url(./fonts/Roboto-Regular.ttf);
}

body {
  font-family: roboto;
  background-color: var(--dark);
  color: var(--light);
  height: 98vh;
  display: grid;
  justify-content: center;
  align-content: center;
}

#container {
  grid-area: container;
  display: grid;
  grid-template-areas:
    'main-content . search'
    'main-content bubbles bubbles'
    'main-content forecast forecast'
    'main-content forecast forecast';
  justify-content: space-between;
  gap: 4em;
}

#main-content {
  grid-area: main-content;
  display: grid;
  grid-template-areas:
    'main-info'
    'secondary';
  box-shadow: 1px 1px 5px black;
  border-radius: 1em;
  padding: 1em;
  text-align: center;
}

#main-info {
  grid-area: main-info;
  display: flex;
  flex-direction: column;
}

#time {
  padding: 0.5em;
}

#city-and-country {
  margin-bottom: 0.5em;
}

#main-icon {
  height: 15em;
  margin: -3em;
  padding: 0;
}

#weather {
  grid-area: weather;
  position: relative;
  left: 0.2em;
  bottom: 0.1em;
}

#city {
  display: inline-block;
}
#country {
  display: inline-block;
  position: relative;
  bottom: 1.3em;
}

#temp-plus-switch {
  padding-top: 1em;
}

#main-temperature {
  display: inline-block;
}
#unit-switch {
  display: inline-block;
  position: relative;
  bottom: 5em;
}
#unit-switch-separator {
  display: inline-block;
}

.scale-btn {
  background-color: rgba(255, 255, 255, 0);
  color: var(--light);
  border: 0px;
  border-radius: 50%;
  font-size: 1.5em;
  cursor: pointer;
}

#celsius {
  padding-right: 0.2em;
}

#fahrenheit {
  padding-left: 0em;
}

.active-unit {
  font-weight: bold;
}
.temp-metric::after {
  content: '°C';
  font-size: 0.6em;
  position: relative;
  bottom: 0.5em;
}

.temp-imperial::after {
  content: '°F';
  font-size: 0.6em;
  position: relative;
  bottom: 0.5em;
}

.speed-metric::after {
  content: 'km/h';
  font-size: 0.6em;
}

.speed-imperial::after {
  content: 'mph';
  font-size: 0.6em;
}

#search {
  grid-area: search;
  height: 2em;
}

#search-bar {
  border: 0px solid black;
  border-radius: 0.5em;
  color: var(--light);
  background-color: rgba(255, 255, 255, 0.068);
  height: 3em;
  width: 20em;
  padding-left: 0.6em;
}

#error-message {
  color: rgb(187, 0, 0);
  text-align: start;
  padding: 0.4em;
}

::placeholder {
  color: rgba(255, 255, 255, 0.521);
  font-family: roboto;
}

#search-bar:focus {
  outline: none;
}
#search-btn {
  background-color: rgba(255, 255, 255, 0);
  color: var(--light);
  border: 0px;
  position: relative;
  right: 2.2em;
}

#secondary-info {
  grid-area: secondary;
  display: flex;
  text-align: center;
  box-shadow: 1px 1px 5px black;
  border-radius: 1em;
  padding: 0.5em;
}

.secondary-info-text {
  padding: 0.5em;
}

#bubbles {
  grid-area: bubbles;
  display: flex;
  justify-content: space-around;
}

.bubble {
  width: 6.5em;
  height: 5.7em;
  line-height: 2em;
  border-radius: 50%;
  box-shadow: 1px 1px 5px black;
  text-align: center;
  padding-top: 0.8em;
}

.bubble-value {
  margin: 0.2em;
}

#temp-bubble {
  position: relative;
  top: 1.2em;
}
#sunrise-bubble {
  position: relative;
  bottom: 3em;
  left: 0.5em;
}
#sunset-bubble {
  position: relative;
  top: 2em;
  right: 1.5em;
}

.bubble-temp {
  margin: 0em 0.2em;
}

#high-low {
  display: flex;
  justify-content: space-between;
}

#forecast {
  grid-area: forecast;
  box-shadow: 1px 1px 5px black;
  border-radius: 1em;
  padding: 0.5em;
  text-align: center;
  width: 25em;
  height: 13.3em;
}

.forecast-card {
  display: inline-block;
  margin: 0.5em;
  text-align: center;
  box-shadow: 1px 1px 5px black;
  border-radius: 1em;
  padding: 0.5em;
}

.forecast-weather {
  margin: -0.8em 0em;
}

h1 {
  font-size: 8em;
  font-weight: bold;
}

h2 {
  font-size: 4em;
  font-weight: bold;
}

h4 {
  font-size: 1.5em;
}

h5 {
  font-size: 1.4em;
}

